assets/css/styles.css
/* ... */
/*
  9. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}
.navbar {
  padding: 1rem 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.navbar__logo {
  width: 4.688rem;
}
.hero h1 {
  font-family: "Poppins", sans-serif;
  font-size: clamp(2.5rem, 5vw, 3.75rem);
}
.hero p {
  font-family: "Lora", sans-serif;
  margin-top: 1rem;
  margin-bottom: 2rem;
}
.hero__cta__btn {
  outline: none;
  background-color: #ff8e3c;
  padding: 1rem 1.5rem;
  border-radius: 0.5rem;
  border: none;
  font-family: "Poppins", sans-serif;
  margin-bottom: 1rem;
  transition: all 0.3s;
  text-decoration: none;
  color: #333333;
}
.hero__cta__btn:hover {
  background-color: #ff7009;
  cursor: pointer;
}
.products {
  padding: 3.375rem 0;
  background-color: #fee5cc;
}
.products__grid {
  margin-top: 7.813rem;
}
.products__heading__container p {
  text-align: center;
  font-family: "Lora", sans-serif;
  margin-bottom: 0.5rem;
}
.products__heading__container h1 {
  text-align: center;
  font-family: "Poppins", sans-serif;
  font-size: clamp(2.5rem, 5vw, 4.688rem);
}
.products__card {
  padding: 3.375rem 1rem 2.5rem 1rem;
  background-color: #fffffe;
  border-radius: 0.5rem;
  position: relative;
}
.products__card:first-of-type {
  margin-bottom: 7.813rem;
}
.products__card img {
  margin: -9.375rem auto 1rem auto;
}
.products__card h2 {
  font-family: "Poppins", sans-serif;
  margin-bottom: 0.5rem;
}
.products__card p {
  font-family: "Lora", sans-serif;
}
.scrollingTextContainer {
  display: flex;
  align-items: center;
  overflow: hidden;
  height: 9.375rem;
}
.scroll {
  white-space: nowrap;
}
.scroll div {
  display: flex;
  gap: 0.5rem;
}
.scroll p {
  font-size: 4.688rem;
  font-family: "Poppins", sans-serif;
  margin-bottom: 0;
  line-height: 0.625rem;
}
.RightToLeft {
  animation: RightToLeft 10s infinite linear;
}
.mission {
  padding: 3.125rem 1rem;
  background-color: #fee5cc;
}
.mission__statement__container h1 {
  font-family: "Poppins", sans-serif;
  font-size: clamp(2.5rem, 5vw, 3.75rem);
  margin-bottom: 0.5rem;
}
.mission__statement__container p {
  font-family: "Lora", sans-serif;
}
.services {
  padding: 3.125rem 1rem;
}
.services p {
  text-align: center;
  font-family: "Lora", sans-serif;
  margin-bottom: 0.5rem;
}
.services h1 {
  font-family: "Poppins", sans-serif;
  font-size: clamp(2.5rem, 5vw, 3.75rem);
  text-align: center;
}
.services__card {
  padding: 1rem 0.5rem;
  background-color: #fed6de;
  border-radius: 0.5rem;
  margin-top: 3.75rem;
  color: #642f3a;
}
.services__card img {
  margin: -3.125rem auto 1rem auto;
}
.testimonials__container {
  padding: 3.125rem 0;
  background-color: #fee5cc;
}
.testimonials__container p {
  font-family: "Lora", sans-serif;
  text-align: center;
  margin-bottom: 0.5rem;
}
.testimonials__container h1 {
  font-family: "Poppins", sans-serif;
  font-size: clamp(2.5rem, 5vw, 4.688rem);
  text-align: center;
}
.testimonial__card {
  background-color: #fffffe;
  padding: 1rem 1rem 1.5rem 1rem;
  border-radius: 0.5rem;
  margin-top: 6.25rem;
}
.testimonial__card img {
  margin: -5.313rem auto 1.5rem auto;
}
.testimonial__card__statement p {
  text-align: left;
  margin-bottom: 0;
}
.proposition {
  background: url("../images/proposition-illustration.webp") no-repeat center;
  padding: 3.125rem 1rem;
}
.proposition h1 {
  font-family: "Poppins", sans-serif;
  font-size: clamp(3.125rem, 5vw, 6.25rem);
  text-align: center;
  color: #fffffe;
}
.blog {
  padding: 3.125rem 1rem;
  background-color: #fee5cc;
}
.blog__content p:first-of-type {
  font-family: "Lora", sans-serif;
  font-weight: bold;
}
.blog__content h1 {
  font-family: "Poppins", sans-serif;
  font-size: clamp(2.5rem, 5vw, 3.75rem);
  margin-bottom: 0.5rem;
}
.blog__content p {
  font-family: "Lora", sans-serif;
}
.contact {
  padding: 3.125rem 0;
}
.contact p {
  font-family: "Lora", sans-serif;
  text-align: center;
  margin-bottom: 0.5rem;
  color: inherit;
  font-size: 1.125rem;
}
.contact h1 {
  font-family: "Poppins", sans-serif;
  font-size: clamp(2.5rem, 5vw, 4.688rem);
  text-align: center;
}
.contact__card {
  padding: 1rem;
  border-radius: 1rem;
  font-weight: bold;
  margin-top: 4.688;
}
.contact__card img {
  margin: -3.75rem auto 1rem auto;
}
.contact__card a {
  text-decoration: none;
  color: inherit;
}
.isFacebook {
  background-color: #a8bee9;
  color: #3764b9;
}
.isInstagram {
  background-color: #ffbcb6;
  color: #ff3a55;
}
.isWhatsapp {
  background-color: #b3eacb;
  color: #009440;
}
.otherphotos {
  display: grid;
  grid-template-columns: 1fr 1fr;
}
footer {
  padding: 3.125rem 0;
}
footer img {
  margin: 0 auto 3rem auto;
}
.footer__links__container {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}
.footer__links__grid__container {
  display: grid;
  gap: 3rem;
}
.footer__links__grid__container h1 {
  font-family: "Poppins", sans-serif;
  margin-bottom: 0.5rem;
}
.footer__links__grid__container a,
.footer__links__grid__container p {
  text-decoration: none;
  color: #000;
  font-family: "Lora", sans-serif;
  margin-bottom: 0;
  width: fit-content;
}
.copyright {
  padding: 3rem;
  text-align: center;
  background-color: #fee5cc;
}
.copyright p {
  font-family: "Poppins", sans-serif;
  font-size: clamp(1rem, 2.5vw, 1.5rem);
}
@keyframes RightToLeft {
  from {
    transform: translateX(0%);
  }
  to {
    transform: translateX(-50%);
  }
}
/* Hamburger menu */
.hamburger {
  cursor: pointer;
}
.hamburger input {
  display: none;
}
.hamburger svg {
  /* The size of the SVG defines the overall size */
  height: 3em;
  /* Define the transition for transforming the SVG */
  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
}
/* ... */

